--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.4.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.mp.p195</groupId>
+	<groupId>com.mp.p195</groupId><!--  -->
 	<artifactId>Project_195</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Project_195</name>
